[tool.poetry]
name = "apollo-scenario-record-analyzer"
version = "0.1.0"
description = ""
authors = ["Yuntianyi Chen <yuntianc@uci.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
shapely = "^2.0.7"
networkx = "^3.4.2"
pandas = "^2.2.3"
cyber-record = "^0.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
